--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,8 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
+    "inlineSources": true,
+    "sourceRoot": "/",
     "declaration": false,
     "downlevelIteration": true,
     "experimentalDecorators": true,
